@@ -1,6 +1,7 @@
 Overview of changes in lightdm 0.1.3
 
     * Make default user configuration per-display
+    * Only automatically login the first time
 
 Overview of changes in lightdm 0.1.2
 
